# appstore-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  apple-mcp.service  com.apple-mcp.server.plist  pyproject.toml
.claude/: settings.local.json
src/apple_mcp/: __main__.py  auth.py  cache.py  client.py  exchange.py  parsers.py  report_source.py  server.py
src/apple_mcp/tools/: finance.py  installs.py  revenue.py  reviews.py  sales.py  subscriptions.py
tests/: test_parsers.py  test_report_source.py
tests/fixtures/: sample_sales.tsv
