[project]
name = "apple-mcp"
version = "0.1.0"
description = "Apple App Store Connect Reporting MCP Server"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pyjwt>=2.12.1",
]

[project.scripts]
apple-mcp = "apple_mcp.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mcp"]
